--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
-    "lodash": "^3.10.1",
+    "lodash": "*",
     "morgan": "^1.6.1",
     "serve-favicon": "^2.3.0"
   },
