--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-handlebars": "^2.0.1",
     "handlebars": "^4.0.5",
     "lodash": "*",
+    "moment": "^2.15.1",
     "morgan": "^1.6.1",
     "serve-favicon": "^2.3.0"
   },
